ExportXMLWordPrintableJSON

    • Type: Bug
    • Resolution: Fixed
    • Priority: Major - P3
    • 7.1.0-rc0, 7.0.2
    • Affects Version/s: 7.0.0-rc8
    • Component/s: None
    • Sharding EMEA
    • Fully Compatible
    • ALL
    • v7.0
    • Hide

      Create a replica set, set a cluster parameter, then stop the replica set and start a single node in standalone.

      Show
      Create a replica set, set a cluster parameter, then stop the replica set and start a single node in standalone.
    • Sharding EMEA 2023-08-07, Sharding EMEA 2023-08-21
    • 135
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      In a replica set, if we set a cluster server parameter it gets stored in the durable collection config.clusterParameters.

      If the node is then shut down and started back as a standalone the node won't be able to start since it will attempt to set the cluster parameter from the collection:

      {"t":{"$date":"2023-07-24T10:42:34.527+00:00"},"s":"D1", "c":"ASSERT",   "id":23074,   "ctx":"initandlisten","msg":"User assertion","attr":{"error":"IllegalOperation: The 'changeStreamOptions' parameter is unsupported in standalone.","file":"src/mongo/idl/cluster_parameter_synchronization_helpers.cpp","line":68}}
      {"t":{"$date":"2023-07-24T10:42:34.528+00:00"},"s":"D1", "c":"ASSERT",   "id":23074,   "ctx":"initandlisten","msg":"User assertion","attr":{"error":"OperationFailed: ","file":"src/mongo/idl/cluster_parameter_synchronization_helpers.h","line":128}}
      

            Assignee:
            Marcos José Grillo Ramirez
            Reporter:
            Jordi Olivares Provencio
            Votes:
            0 Vote for this issue
            Watchers:
            8 Start watching this issue

              Created:
              Updated:
              Resolved: