SERVER-79236 Allow standalone instances to start with changeStreams and changeStreamOptions cluster parameters

(cherry picked from commit 0988763c57b9e96573c581537c7671f23d9fa256)