src/mongo/db/change_stream_options_manager.cpp
@@ -98,14 +98,6 @@ Status ChangeStreamOptionsParameter::set(const BSONElement& newValueElement,
 
 Status ChangeStreamOptionsParameter::validate(const BSONElement& newValueElement,
                                               const boost::optional<TenantId>& tenantId) const {
-    auto* repl = repl::ReplicationCoordinator::get(getGlobalServiceContext());
-    bool isStandalone = repl &&
-        repl->getReplicationMode() == repl::ReplicationCoordinator::modeNone &&
-        serverGlobalParams.clusterRole.has(ClusterRole::None);
-    if (isStandalone) {
-        return {ErrorCodes::IllegalOperation,
-                "The 'changeStreamOptions' parameter is unsupported in standalone."};
-    }
     try {
         BSONObj changeStreamOptionsObj = newValueElement.Obj();
         Status validateStatus = Status::OK();
